- Updated the bundle name as "com.ppm.peppermint" - Implemented offline message sending support. Now when there is no internet connection the app will cache the messages and when there is connection all cached messages will be triggered with the first message sent by the user. - Added support to record&send consecutive messages. - Implemented recording is cut behaviour. Now when the recording is cut (incoming call, home button, pre set alarm, ..vs) user is promoted to send the current voice message or record a new one. - Subject from messaging is removed, so that MFMessageComposeViewController  will send SMS instead of MMS. - Fixed "Sent" notification hangs error. - Implemented google login with the offical peppermint app. - Implemented facebook login with the offical peppermint app. (As the project is still in development mode, you may have errors when testing login operations. ) - Fixed after login with Google, peppermint app needs to redirect to contacts page error. - Fixed after login with Facebook, peppermint app needs to redirect to contacts page error.

--- a/Peppermint/FastRecordingView.xib
+++ b/Peppermint/FastRecordingView.xib
@@ -82,18 +82,18 @@ to cancel</string>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="3dm-20-FSE" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="APO-ja-Cef"/>
-                <constraint firstItem="3dm-20-FSE" firstAttribute="top" relation="lessThanOrEqual" secondItem="7Qx-iJ-3yh" secondAttribute="bottom" constant="44" id="B16-dv-6m6"/>
+                <constraint firstItem="3dm-20-FSE" firstAttribute="top" relation="lessThanOrEqual" secondItem="7Qx-iJ-3yh" secondAttribute="bottom" priority="750" constant="44" id="B16-dv-6m6"/>
                 <constraint firstItem="7Qx-iJ-3yh" firstAttribute="top" relation="lessThanOrEqual" secondItem="4vy-Vz-Ek4" secondAttribute="bottom" constant="30" id="Ccn-hc-FZA"/>
                 <constraint firstItem="PZg-zV-ZMy" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="25" id="Dl6-Nu-ADo"/>
                 <constraint firstAttribute="centerX" secondItem="4vy-Vz-Ek4" secondAttribute="centerX" id="Esh-Uq-fin"/>
                 <constraint firstAttribute="bottom" secondItem="Yze-9c-yzA" secondAttribute="bottom" id="GtG-AD-xQr"/>
                 <constraint firstItem="PZg-zV-ZMy" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="HpQ-7a-0jI"/>
                 <constraint firstAttribute="bottom" secondItem="3dm-20-FSE" secondAttribute="bottom" id="Nvl-Du-uN9"/>
-                <constraint firstItem="4vy-Vz-Ek4" firstAttribute="top" relation="lessThanOrEqual" secondItem="PZg-zV-ZMy" secondAttribute="bottom" priority="750" constant="98" id="Tk0-eX-Nyn"/>
+                <constraint firstItem="4vy-Vz-Ek4" firstAttribute="top" relation="lessThanOrEqual" secondItem="PZg-zV-ZMy" secondAttribute="bottom" constant="98" id="Tk0-eX-Nyn"/>
                 <constraint firstItem="7Qx-iJ-3yh" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="60" id="bb7-9w-t8s"/>
                 <constraint firstItem="Yze-9c-yzA" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="eKV-VJ-7Cy"/>
                 <constraint firstAttribute="trailing" secondItem="Yze-9c-yzA" secondAttribute="trailing" id="fbd-tq-NcO"/>
-                <constraint firstItem="3dm-20-FSE" firstAttribute="top" relation="greaterThanOrEqual" secondItem="7Qx-iJ-3yh" secondAttribute="bottom" constant="10" id="gmQ-ku-5rF"/>
+                <constraint firstItem="3dm-20-FSE" firstAttribute="top" relation="greaterThanOrEqual" secondItem="7Qx-iJ-3yh" secondAttribute="bottom" priority="750" constant="10" id="gmQ-ku-5rF"/>
                 <constraint firstAttribute="trailing" secondItem="PZg-zV-ZMy" secondAttribute="trailing" constant="8" id="ksL-oB-nHV"/>
                 <constraint firstAttribute="trailing" secondItem="7Qx-iJ-3yh" secondAttribute="trailing" constant="60" id="ox6-Tf-afx"/>
                 <constraint firstAttribute="centerY" secondItem="4vy-Vz-Ek4" secondAttribute="centerY" id="r6f-CR-mYy"/>
