--- a/Peppermint/ContactTableViewCell.xib
+++ b/Peppermint/ContactTableViewCell.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -12,6 +13,7 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8e4-VB-87A" id="ejf-Un-hy5">
+                <rect key="frame" x="0.0" y="0.0" width="414" height="55"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aEQ-5s-Sav" userLabel="Seperator View">
@@ -69,7 +71,7 @@
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <connections>
-                            <action selector="touchDownFinishedOnIndexPath:event:" destination="8e4-VB-87A" eventType="touchCancel" id="867-AS-prJ"/>
+                            <action selector="touchDownCancelledOnIndexPath:event:" destination="8e4-VB-87A" eventType="touchCancel" id="u68-II-Q7w"/>
                             <action selector="touchDownFinishedOnIndexPath:event:" destination="8e4-VB-87A" eventType="touchUpOutside" id="SB5-QP-chY"/>
                             <action selector="touchDownFinishedOnIndexPath:event:" destination="8e4-VB-87A" eventType="touchUpInside" id="jwa-Jr-a9d"/>
                             <action selector="touchDownOnIndexPath:event:" destination="8e4-VB-87A" eventType="touchDown" id="AVs-TW-Att"/>
